Fixed minner bug