@@ -4,19 +4,18 @@ import com.parking.spotlisting.parkingservice.dto.ParkingSpotRequest;
 import com.parking.spotlisting.parkingservice.exception.ResourceNotFoundException;
 import com.parking.spotlisting.parkingservice.model.ParkingSpot;
 import com.parking.spotlisting.parkingservice.repository.ParkingSpotRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ParkingSpotService {
 
     private final ParkingSpotRepository parkingSpotRepository;
-
-    public ParkingSpotService(ParkingSpotRepository parkingSpotRepository) {
-        this.parkingSpotRepository = parkingSpotRepository;
-    }
 
     public ParkingSpot addParkingSpot(ParkingSpotRequest parkingSpotRequest) {
         ParkingSpot.Location location = new ParkingSpot.Location(
@@ -35,7 +34,9 @@ public class ParkingSpotService {
                 parkingSpotRequest.getAvailableEndDate(),
                 parkingSpotRequest.getDescription(),
                 location,
-                parkingSpotRequest.getUserId()
+                parkingSpotRequest.getUserId(),
+                parkingSpotRequest.getPublisherName(),
+                parkingSpotRequest.getPublisherEmail() // Add this line
         );
 
         return parkingSpotRepository.save(parkingSpot);
@@ -56,13 +57,13 @@ public class ParkingSpotService {
     }
 
     public List<ParkingSpot> searchParkingSpots(String city, String startDate, String endDate) {
-        LocalDate start = startDate != null ? LocalDate.parse(startDate) : null;
-        LocalDate end = endDate != null ? LocalDate.parse(endDate) : null;
+        LocalDate start = (startDate != null) ? LocalDate.parse(startDate) : null;
+        LocalDate end = (endDate != null) ? LocalDate.parse(endDate) : null;
 
         return parkingSpotRepository.findAll().stream()
                 .filter(spot -> city == null || spot.getLocation().getCity().equalsIgnoreCase(city))
                 .filter(spot -> start == null || !spot.getAvailableStartDate().isAfter(end))
                 .filter(spot -> end == null || !spot.getAvailableEndDate().isBefore(start))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
